--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "sass": "^1.76.0",
     "tailwindcss": "^3.4.1"
   }
 }
