--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.6.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-images": "^1.8.5",
+    "nextjs": "^0.0.3",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
