--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "contentful": "^10.11.7",
     "cookie": "^0.6.0",
+    "date-fns": "^3.6.0",
+    "graphql-request": "^7.0.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "next-images": "^1.8.5",
     "nextjs": "^0.0.3",
     "nookies": "^2.5.2",
