Layout style updated Side menu navigation improved API fixed

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
+.env
 .env*.local
 
 # vercel
@@ -34,5 +35,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-.env
+
+#builders
+/.idea/
+
+#media
 public/uploads/*
+
