--- a/package.json
+++ b/package.json
@@ -11,22 +11,21 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@svgr/webpack": "^8.1.0",
+    "aws-sdk": "^2.1632.0",
     "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "contentful": "^10.11.7",
-    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "graphql-request": "^7.0.1",
+    "html-to-text": "^9.0.5",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "next-images": "^1.8.5",
     "nextjs": "^0.0.3",
-    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
