--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.13",
     "aws-sdk": "^2.1632.0",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
